--- a/Frontend/src/app/auth/login/login.component.html
+++ b/Frontend/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <form #loginForm="ngForm"
-      (ngSubmit)="login()"
+      (ngSubmit)="login(loginForm)"
       class="px-4 py-3">
   <div [class.mb-25px]="!(email.invalid && (email.dirty || email.touched))">
     <label for="email">Email address</label>
@@ -40,6 +40,6 @@
     </div>
   </div>
   <div class="w-100 text-center">
-    <button type="submit" [disabled]="loginForm.form.invalid" class="btn btn-primary">Sign in</button>
+    <button type="submit" [disabled]="loginForm.form.invalid || logging" class="btn btn-primary">Sign in</button>
   </div>
 </form>
