--- a/Frontend/src/app/main/components/footer/footer.component.html
+++ b/Frontend/src/app/main/components/footer/footer.component.html
@@ -2,13 +2,13 @@
   <div class="container align-content-between text-white">
     <div class="row">
       <div class="col">
-        FEL ČVUT
+        FEL CTU in Prague
       </div>
       <div class="col text-center">
         A4M33VIA 2022/2023
       </div>
       <div class="col text-end">
-        &copy; rehacleo
+        &copy; Řeháček Leoš
       </div>
     </div>
   </div>
