--- a/Frontend/src/app/main/dashboard/dashboard.component.html
+++ b/Frontend/src/app/main/dashboard/dashboard.component.html
@@ -1,76 +1,52 @@
-<div class="w-100 mb-3">
-  <ngb-carousel
-    *ngIf="images">
-    <ng-template ngbSlide *ngFor="let image of images">
-      <div class="picsum-img-wrapper">
-        <img [src]="image" class="w-100" alt="Random first slide" />
-      </div>
-      <div class="carousel-caption">
-        <h3>First slide label</h3>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-      </div>
-    </ng-template>
-  </ngb-carousel>
+<div class="px-4 pt-5 my-5 text-center border-bottom" xmlns="http://www.w3.org/1999/html">
+  <h1 class="display-4 fw-bold">Image generator</h1>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">A simple application with which you can generate simple images based on a description. This application was created in the VIA course at FEL CTU in Prague.</p>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+      <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3" [routerLink]="['/auth/register']">Register</button>
+      <button type="button" class="btn btn-outline-secondary btn-lg px-4" [routerLink]="['gallery']">View Gallery</button>
+    </div>
+  </div>
+  <div class="overflow-hidden" style="max-height: 30vh;">
+    <div class="container px-5">
+      <img src="/assets/ladingPage.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+    </div>
+  </div>
 </div>
 
-<div class="container pb-5">
-  <div class="row">
-    <div class="col-lg-4">
-      <h2 class="fw-normal">Heading</h2>
-      <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-      <p><a class="btn btn-secondary" href="#">View details »</a></p>
-    </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4">
-      <h2 class="fw-normal">Heading</h2>
-      <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-      <p><a class="btn btn-secondary" href="#">View details »</a></p>
-    </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4">
-      <h2 class="fw-normal">Heading</h2>
-      <p>And lastly this, the third column of representative placeholder content.</p>
-      <p><a class="btn btn-secondary" href="#">View details »</a></p>
-    </div><!-- /.col-lg-4 -->
-  </div><!-- /.row -->
-
-
-  <!-- START THE FEATURETTES -->
-
-  <hr class="featurette-divider">
-
-  <div class="row featurette">
-    <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-      <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
-    </div>
-    <div class="col-md-5">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+<div class="pb-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <h2 class="fw-normal">Simple generator</h2>
+        <p>Image generation is done using a simple form builder. The server then processes your request and returns an image that you can save.</p>
+      </div>
+      <div class="col-lg-4">
+        <h2 class="fw-normal">Gallery</h2>
+        <p>The gallery contains all images created by all users. In addition, logged-in users can rate other images.</p>
+        <p><a class="btn btn-secondary" [routerLink]="['gallery']">View Gallery</a></p>
+      </div>
+      <div class="col-lg-4">
+        <h2 class="fw-normal">Using</h2>
+        <p>To generate images you need to register. Then each user can create <span class="fw-bolder">up to 10 images.</span></p>
+      </div>
     </div>
   </div>
 
   <hr class="featurette-divider">
 
-  <div class="row featurette">
-    <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-      <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
-    </div>
-    <div class="col-md-5 order-md-1">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
-    </div>
-  </div>
-
-  <hr class="featurette-divider">
-
-  <div class="row featurette">
-    <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-      <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
-    </div>
-    <div class="col-md-5">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <h2 class="fw-normal lh-1">Based on  <span class="text-muted">AI</span></h2>
+        <p class="lead">Image generation is based on AI. This is possible with the <span class="fw-bold">DALL·E 2</span> tool from <a href="https://openai.com/" target="_blank">OpenAI</a>. DALL·E 2 can create original, realistic images and art from a
+          text description. It can combine concepts, attributes, and styles.</p>
+        <p><a class="btn btn-secondary" href="https://openai.com/dall-e-2/" target="_blank">More informations »</a></p>
+      </div>
+      <div class="col-md-5">
+        <div class="row ms-0">DALL·E 2</div>
+        <img class="bd-placeholder-img bd-placeholder-img-lg img-fluid mx-auto" width="300" height="300" src="https://cdn.openai.com/dall-e-2/demos/text2im/astronaut/horse/photo/0.jpg">
+      </div>
     </div>
   </div>
 
