add build and start scripts

--- a/Frontend/src/app/main/dashboard/dashboard.component.html
+++ b/Frontend/src/app/main/dashboard/dashboard.component.html
@@ -45,7 +45,7 @@
       </div>
       <div class="col-md-5">
         <div class="row ms-0">DALL·E 2</div>
-        <img class="bd-placeholder-img bd-placeholder-img-lg img-fluid mx-auto" width="300" height="300" src="https://cdn.openai.com/dall-e-2/demos/text2im/astronaut/horse/photo/0.jpg">
+        <img class="bd-placeholder-img bd-placeholder-img-lg img-fluid mx-auto" width="300" height="300" src="/assets/dallE.jpeg">
       </div>
     </div>
   </div>
