edit generating image

--- a/Frontend/src/app/main/components/header/header.component.html
+++ b/Frontend/src/app/main/components/header/header.component.html
@@ -23,7 +23,7 @@
           <li class="nav-item" *ngIf="user">
             <a class="nav-link link-light"
               [routerLink]="['generate']"
-            ><i class="bi bi-palette-fill me-1"></i>Create</a>
+            ><i class="bi bi-palette-fill me-1"></i>Generate</a>
           </li>
         </ul>
       </div>
