--- a/Frontend/src/app/main/profile/profile.component.html
+++ b/Frontend/src/app/main/profile/profile.component.html
@@ -6,7 +6,7 @@
           <div class="col-md-4 gradient-custom text-center px-2"
                style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
             <div>
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+              <img src="/assets/avatar.webp"
                    alt="Avatar" class="img-fluid my-4" style="width: 80px;">
             </div>
             <div>
